--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-vis": "^1.11.7",
     "use-persisted-state": "^0.3.0"
   },
   "devDependencies": {
