--- a/package.json
+++ b/package.json
@@ -10,25 +10,27 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-vis": "^1.11.7",
-    "use-persisted-state": "^0.3.0"
+    "rsocket-websocket-client": "0.0.19",
+    "use-persisted-state": "^0.3.0",
+    "rsocket-core": "latest"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.8.7",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "http-proxy-middleware": "^0.20.0",
     "copy-webpack-plugin": "^5.1.1",
     "html-webpack-plugin": "^3.2.0",
+    "http-proxy-middleware": "^0.20.0",
     "prettier": "^1.19.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1"
+    "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development --host 0.0.0.0",
