--- a/pom.xml
+++ b/pom.xml
@@ -10,4 +10,9 @@
 	<name>reactive-streaming</name>
 	<description>Experimentation app to show off reactive programming, streaming api for front- and back-end</description>
 
+	<modules>
+		<module>backend</module>
+		<module>middleware</module>
+	</modules>
+
 </project>
