Setup tcp client to connect to producer (upstream) or generate words in middleware

--- a/middleware/src/main/resources/application.yml
+++ b/middleware/src/main/resources/application.yml
@@ -5,8 +5,10 @@ spring:
       mapping-path: /ws
       transport: websocket
 
+
 app.wordgeneration:
-  interval: 5s
+  use-upstream: false
+  interval: 500ms
   words:
     - "Java"
     - "NodeJs",
