--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,10 +36,10 @@
     "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
-    "start": "../node_modules/.bin/webpack-dev-server --mode development --host 0.0.0.0",
-    "build": "../node_modules/.bin/webpack --mode production ./",
-    "test": "../node_modules/.bin/react-scripts test",
-    "eject": "../node_modules/.bin/react-scripts eject"
+    "start": "webpack-dev-server --mode development --host 0.0.0.0",
+    "build": "webpack --mode production ./",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
