--- a/middleware/pom.xml
+++ b/middleware/pom.xml
@@ -60,6 +60,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>io.projectreactor.rabbitmq</groupId>
+			<artifactId>reactor-rabbitmq</artifactId>
+<!--			<version>1.4.3.RELEASE</version>-->
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
